@@ -48,6 +48,13 @@
             <field name="name">Endorsement Set Number</field>
             <field name="code">endorsement_set_number</field>
         </record>
+        <record model="ir.sequence" id="sequence_number">
+            <field name="name">Endorsement Set Number Sequence</field>
+            <field name="code">endorsement_set_number</field>
+        </record>
+        <record model="endorsement.configuration" id="endorsement_configuration">
+            <field name="endorsement_set_number_sequence" ref="sequence_number"/>
+        </record>
         <record model="ir.ui.view" id="configuration_view_form">
             <field name="model">endorsement.configuration</field>
             <field name="type">form</field>
