@@ -1,3 +1,4 @@
+* Add endorsement number
 * Allow to trigger calculate after application
 * Allow to specify restoration order
 
